# mavros_controllers

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  Makefile  README.md  dependencies.rosinstall
.github/workflows/: build_test.yml  check_style.yml
Tools/: configure.sh  fix_style.sh  run_controller.sh
controller_benchmark/: CMakeLists.txt  README.md  package.xml
controller_benchmark/include/controller_benchmark/: controller_benchmark.h  error_measurer.h
controller_benchmark/launch/: controller_benchmark.launch
controller_benchmark/src/: controller_benchmark.cpp  controller_benchmark_node.cpp  error_measurer.cpp
controller_eval/: CMakeLists.txt  package.xml
controller_eval/include/controller_eval/: controller_eval.h  error_measurer.h
controller_eval/src/: controller_eval.cpp  controller_eval_node.cpp  error_measurer.cpp
controller_msgs/: CMakeLists.txt  package.xml
controller_msgs/msg/: FlatTarget.msg  JerkStateTarget.msg
dob_controller/: CMakeLists.txt  package.xml
dob_controller/include/dob_controller/: dob_controller.h
dob_controller/launch/: dob_track_circle.launch
dob_controller/src/: dob_controller.cpp  dob_controller_node.cpp
geometric_controller/: CMakeLists.txt  README.md  package.xml
geometric_controller/cfg/: GeometricController.cfg
geometric_controller/include/geometric_controller/: common.h  control.h  geometric_controller.h  jerk_tracking_control.h  nonlinear_attitude_control.h  nonlinear_geometric_control.h
geometric_controller/launch/: config_file.rviz  dob_track_circle.launch  mav_trajectory_track_circle.launch  mav_trajectory_track_lissajous.launch  multi_vehicle_config_file.rviz  sitl_mav_voxblox_planning.launch  sitl_multi_vehicle_track_circle.launch  sitl_trajectory_track_circle.launch  sitl_trajectory_track_lamniscate.launch  trajectory_controller.launch  trajectory_flip.launch  trajectory_track_circle.launch
geometric_controller/src/: geometric_controller.cpp  geometric_controller_node.cpp  jerk_tracking_control.cpp  nonlinear_attitude_control.cpp  nonlinear_geometric_control.cpp
geometric_controller/test/: common-test.cpp  geometric_controller-test.cpp  test_example.cpp
launch/: mavros_controllers.launch
matlab/: log_view.m  quat2EulerAngles.m  quat2eul1.m
mavros_controllers/: CMakeLists.txt  package.xml
parameter_estimator/: CMakeLists.txt  package.xml
parameter_estimator/include/parameter_estimator/: estimator.h  parameter_estimator.h
parameter_estimator/launch/: estimate_parameter.launch
parameter_estimator/src/: estimator.cpp  parameter_estimator.cpp  parameter_estimator_node.cpp
systemd/: environment.conf  mavros_controllers.service
trajectory_controller/: CMakeLists.txt  README.md  package.xml
trajectory_controller/include/trajectory_controller/: trajectory_controller.h
trajectory_controller/src/: trajectory_controller.cpp  trajectory_controller_node.cpp
trajectory_publisher/: CMakeLists.txt  README.md  package.xml
trajectory_publisher/include/trajectory_publisher/: .trajectoryPublisher.h.swp  fliptrajectory.h  polynomialtrajectory.h  shapetrajectory.h  trajectory.h  trajectoryPublisher.h
trajectory_publisher/launch/: mav_trajectory_setpointraw.launch  sitl_trajectory_setpointraw.launch  trajectory_hovering.launch  trajectory_publisher.launch  trajectory_setpointraw.launch  trajectory_setpointraw_circle.launch  trajectory_setpointraw_orig.launch
trajectory_publisher/src/: fliptrajectory.cpp  polynomialtrajectory.cpp  shapetrajectory.cpp  trajectory.cpp  trajectoryPublisher.cpp  trajectoryPublisher_node.cpp
